# NoLibGame

./: CMakeLists.txt  LICENSE  README.md
assets/shaders/: color_only.frag  color_only.vert  default.frag  default.vert  symbol.geom  symbol.vert
src/: App.cpp  App.h  GLFunctions.h  main.cpp
src/GL/: glext.h  wglext.h
src/assets/: Assets.cpp  Assets.h
src/components/: Component.h  ComponentSystem.cpp  ComponentSystem.h  Transform.h
src/graphics/: Camera.cpp  Camera.h  Plane.cpp  Plane.h  RenderData.h  Renderable.h  Shaders.cpp  Shaders.h  Texture.h  Triangle.h
src/graphics/gizmo/: CoordinateSystem.cpp  CoordinateSystem.h
src/graphics/lights/: Light.h
src/graphics/objects/: Plane.cpp  Plane.h  World.cpp  World.h  WorldObject.h
src/math/: Math.h  Matrices.h  Quaternion.h  Vectors.h
src/utils/: Inputs.cpp  Inputs.h  Logger.h
src/utils/text/: Symbol.h  SymbolsGenerator.cpp  SymbolsGenerator.h
